diesel_compile_tests/tests/fail/derive/bad_foreign_derive.stderr
error: expected `,`
 --> tests/fail/derive/bad_foreign_derive.rs:7:25
  |
7 | #[diesel(foreign_derive = true)]
  |                         ^

error: foreign_derive requires at least one field
  --> tests/fail/derive/bad_foreign_derive.rs:10:10
   |
10 | #[derive(ValidGrouping)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `ValidGrouping` (in Nightly builds, run with -Z macro-backtrace for more info)

error: foreign_derive requires at least one field
  --> tests/fail/derive/bad_foreign_derive.rs:14:10
   |
14 | #[derive(AsExpression)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsExpression` (in Nightly builds, run with -Z macro-backtrace for more info)

error: foreign_derive requires at least one field
  --> tests/fail/derive/bad_foreign_derive.rs:19:10
   |
19 | #[derive(FromSqlRow)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromSqlRow` (in Nightly builds, run with -Z macro-backtrace for more info)
